<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/five"
    android:fitsSystemWindows="true"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/poppins_medium"
            android:layout_width="match_parent"
            android:layout_toStartOf="@+id/lblremove"
            android:layout_height="wrap_content"
            android:text="@string/course_name"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen_sp" />

        <ImageView
            android:layout_alignParentEnd="true"
            android:id="@+id/lblremove"
            android:src="@drawable/close_red"
            android:layout_width="@dimen/twenty"
            android:layout_height="@dimen/twenty">
        </ImageView>
    </RelativeLayout>
    <EditText
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/five"
        android:id="@+id/edtCourseName"
        android:layout_width="match_parent"
        android:hint="@string/enter_course_name"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray_radius"
        android:padding="@dimen/eight" />

    <TextView
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/institute"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp" />
    <EditText
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/five"
        android:id="@+id/edtInstituteName"
        android:hint="@string/enter_institute_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray_radius"
        android:padding="@dimen/eight" />

    <TextView
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="@font/poppins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp" />
    <EditText
        android:layout_marginTop="@dimen/five"
        android:id="@+id/edtDuration"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/sixteen_sp"
        android:hint="@string/enter_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray_radius"
        android:padding="@dimen/eight" />


</LinearLayout>