<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:elevation="2dp">

    <TextView
        android:id="@+id/tvCourseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppins_medium" />

    <TextView
        android:id="@+id/tvInstitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/institute_name"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/poppins_regular" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:fontFamily="@font/poppins_regular" />

</LinearLayout>
