<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/twenty"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fifteen">

        <LinearLayout
            android:id="@+id/btnDocFormat"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="@dimen/twenty_five"
            android:paddingTop="@dimen/five"
            android:paddingEnd="@dimen/thirty"
            android:paddingBottom="@dimen/five"
            android:background="@drawable/rect_gray_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fourteen_sp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/download_as_doc_format"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twelve_sp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/to_edit_resume_manually"
                android:textColor="@color/light_gray">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/ten"
            android:id="@+id/btnSave"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_blue_radius"
            android:orientation="vertical"
            android:paddingStart="@dimen/twenty_five"
            android:paddingTop="@dimen/five"
            android:paddingEnd="@dimen/thirty"
            android:paddingBottom="@dimen/five"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/fourteen_sp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/download_as_pdf_format"
               >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/twelve_sp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/to_share_with_company_hrs"
                android:textColor="@color/light_gray"
                >
            </TextView>

        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>